--- a/assets/package.json
+++ b/assets/package.json
@@ -10,8 +10,10 @@
     "phoenix_html": "file:../deps/phoenix_html"
   },
   "devDependencies": {
-    "babel-brunch": "6.1.1",
+    "babel-brunch": "^7.0.1",
+    "braces": ">=2.3.1",
     "brunch": "^2.10.17",
+    "clean-css": ">=4.1.11",
     "clean-css-brunch": "2.10.0",
     "uglify-js-brunch": "2.10.0"
   }
